@@ -237,6 +237,9 @@ function parseBrowseResp(data, parent, options, cacheKey, parentCommand, parentG
                     }
                     i.title=i.title.replace(/&#(\d+);/g, function(m, dec) { return String.fromCharCode(dec); });
                     i.title=i.title.replace(/&quot;/g, '"').replace(/&amp;/g, '&').replace(/&lt;/g, '<').replace(/&gt;/g, '>');
+                    if (i.type=="header") {
+                        i.header = true;
+                    }
                 }
 
                 i.section = parent ? parent.section : undefined;
@@ -361,7 +364,7 @@ function parseBrowseResp(data, parent, options, cacheKey, parentCommand, parentG
                         } else {
                             mapIcon(i);
                         }
-                        if (STREAM_SCHEMAS.has(i.presetParams.favorites_url.split(":")[0]) && allowPinning) {
+                        if (STREAM_SCHEMAS.has(i.presetParams.favorites_url.split(":")[0]) && allowPinning && !i.header) {
                             i.isRadio = true;
                             if (!addedDivider && i.menu.length>0) {
                                 i.menu.push(DIVIDER);
@@ -433,7 +436,7 @@ function parseBrowseResp(data, parent, options, cacheKey, parentCommand, parentG
                     if (queryParams.party && HIDE_APPS_FOR_PARTY.has(i.id)) {
                         continue;
                     }
-                    if (allowPinning) {
+                    if (allowPinning && !i.header) {
                         if (!addedDivider && i.menu.length>0) {
                             i.menu.push(DIVIDER);
                             addedDivider = true;
@@ -458,7 +461,7 @@ function parseBrowseResp(data, parent, options, cacheKey, parentCommand, parentG
                                 i.id = "radio:"+i.title;
                             }
                         }
-                        if (allowPinning) {
+                        if (allowPinning && !i.header) {
                             if (i.menu.length>0 && i.menu[0]==PLAY_ACTION && (i.icon || i.image) && i.type!="entry" && i.presetParams && i.presetParams.favorites_url) {
                                 // Only allow to pin if we can play!
                                 if (!addedDivider && i.menu.length>0) {
