@@ -12,6 +12,7 @@
  9. List album contributors in 'Information' page.
 10. Add 'Scroll to' action for artists with multiple release categories.
 11. Don't allow "fake" add/play-all for Qobuz playlists.
+12. 'header' support for SlimBrowse lists.
 
 4.4.1
 -----
